		Fixed DV video detection
		Fixed "Definitely disable subtitles" option with ASS/SSA subtitles
		Fixed default audio/subtitle priority options
		Fixed running on headless servers
		Windows 7 and Vista users are reminded to run as administrator before attempting to automatically update
		Fixed multithreading bug with MEncoder on Linux
		Made layout more consistent
		Updated WEB.conf with working default video streams
	Languages:
		Updated Simplified Chinese (thanks, lovenemesis!)
		Updated Czech (thanks, valib!)
		Updated English
		Added image for Hebrew subtitle choosing
	Plugin Installer:
		Added Plugin Installer which lets you automatically browse plugins and install them, see this page for details: http://www.universalmediaserver.com/forum/viewtopic.php?f=8&t=152

1.3.0 - 2012-07-09

	General:
		Enabled FFmpeg video player for all platforms
		Updated FFmpeg for Windows to e01f478 (20120319)
		Updated 32-bit MediaInfo to the 20120611 development snapshot which fixes a bug with detecting the duration of some avi files
		Improved FFmpeg commands
		Added support for PGS (Blu-ray) subtitles
		Added support for VobSub (DVD) subtitles in MP4 container
		Better handling of embedded ASS/SSA subtitle styling
		Fixed audio track selection for MP4 and MOV containers
		Localized audio and subtitle priority defaults
		Added option on Traces tab to pack useful debug information into a zip file
		Fixed 64-bit OS detection for Windows and OS X
		Made program-closing more reliable
		Fixed default settings
	Languages:
		Updated Catalan (thanks, aseques)
		Improved English

1.2.1 - 2012-06-30

	General:
		Improved video buffer stability
		The default versions of UMS.conf and WEB.conf are now put in ProgramData on Windows (thanks to vulcan for reporting this bug)
		Updated UMS.conf
		Updated renderer.conf creation instructions
		Fixed AviSynth/FFmpeg crash
		Improved AviSynth/FFmpeg engine code
		Enabled convertfps by default