@@ -20,14 +20,18 @@
 		Windows 7 and Vista users are reminded to run as administrator before attempting to automatically update
 		Fixed multithreading bug with MEncoder on Linux
 		Made layout more consistent
+	Plugin Installer:
+		Added Plugin Installer which lets you automatically browse plugins and install them, see this page for details: http://www.universalmediaserver.com/forum/viewtopic.php?f=8&t=152
+	Web:
+		Added new default web video engine: FFMpeg Web Video
 		Updated WEB.conf with working default video streams
+		Added support for new web protocols: mmsh:// and mmst://
+		Added The Onion to the default video feeds
 	Languages:
 		Updated Simplified Chinese (thanks, lovenemesis!)
 		Updated Czech (thanks, valib!)
 		Updated English
 		Added image for Hebrew subtitle choosing
-	Plugin Installer:
-		Added Plugin Installer which lets you automatically browse plugins and install them, see this page for details: http://www.universalmediaserver.com/forum/viewtopic.php?f=8&t=152
 
 1.3.0 - 2012-07-09
 
